force-app/main/default/objects/Project_Details__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contain the relationship between client record and Project Details</description>
    <inlineHelpText>Relational field with Project Details</inlineHelpText>
    <label>Client</label>
    <referenceTo>Client__c</referenceTo>
    <relationshipLabel>Project Detailss (Client)</relationshipLabel>
    <relationshipName>Project_Detailss1</relationshipName>
    <type>Lookup</type>
</CustomField>