force-app/main/default/objects/Project_Details__c/fields/ClientRef__c.field-meta.xml
<CustomField>
    <fullName>ClientRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field having relation with client object</description>
    <inlineHelpText>Relational  field of Project Details with client</inlineHelpText>
    <label>ClientRef</label>
    <referenceTo>Client__c</referenceTo>
    <relationshipLabel>Project Detailss</relationshipLabel>
    <relationshipName>Project_Detailss</relationshipName>
    <type>Lookup</type>
</CustomField>