force-app/main/default/objects/Project_Details__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The field having the date at which project end</description>
    <inlineHelpText>End date of project</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>