force-app/main/default/objects/Project_Details__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Field contain the relationship with Employee object</description>
    <inlineHelpText>relationship with Employee object</inlineHelpText>
    <label>Manager</label>
    <lookupFilter>
        <active>false</active>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>EMPLOYEE__c</referenceTo>
    <relationshipLabel>Project Detailss</relationshipLabel>
    <relationshipName>Project_Detailss</relationshipName>
    <type>Lookup</type>
</CustomField>