force-app/main/default/objects/Project_Details__c/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <description>This fielding having briefing of the project</description>
    <inlineHelpText>Information of the project</inlineHelpText>
    <label>Project Description</label>
    <type>TextArea</type>
</CustomField>