force-app/main/default/objects/Project_Details__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>This Field contain date at which the project development is started</description>
    <inlineHelpText>Starting date of project</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>